Added JSON to Prospect/Template converters, Template and Prospect controllers, services and repositories
