# src/main/java/com/example/processmanagementtool/web/ProspectController.java
@@ -1,0 +1,25 @@
+package com.example.processmanagementtool.web;
+
+import com.example.processmanagementtool.api.v1.ProspectApi;
+import com.example.processmanagementtool.dto.ProspectRequestDTO;
+import com.example.processmanagementtool.dto.SuccessResponseDTO;
+import com.example.processmanagementtool.prospect.ProspectService;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.server.ServerWebExchange;
+import reactor.core.publisher.Mono;
+
+@RestController
+@RequiredArgsConstructor
+public class ProspectController implements ProspectApi {
+
+    private final ProspectService prospectService;
+
+    @Override
+    public Mono<ResponseEntity<SuccessResponseDTO>> createNewProspect(Mono<ProspectRequestDTO> prospectRequestDTO, ServerWebExchange exchange) {
+        return exchange.getPrincipal()
+                .flatMap(principal -> prospectService.createNewProspect(principal, prospectRequestDTO))
+                .map(ResponseEntity::ok);
+    }
+}
